# data-science-template

./: README.md
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
